Fix horizontal scrollbars appearing in plugin details

--- a/app/plugins/core/plugins/Preview/styles.css
+++ b/app/plugins/core/plugins/Preview/styles.css
@@ -13,7 +13,7 @@
   font-size: .8em;
   align-self: flex-start;
   font-size: 16px;
-  padding: 10px;
+  /* padding: 10px; */
   p {
     font-size: 1em;
     margin: 0 0 10px;
